2003-09-30  Ulrich Drepper  <drepper@redhat.com>

	* elf/rtld.c (dl_main): Also set l_map_start.

2003-09-30  Daniel Jacobowitz  <drow@mvista.com>

	* elf/rtld.c (dl_main): Set l_libname and l_name for the sysinfo DSO
	to work around kernel problem.

2003-09-27  Wolfram Gloger  <wg@malloc.de>

	* malloc/malloc.c: Include <malloc-machine.h> earlier instead of
	"thread-m.h", so that default parameters can be overridden in a
	system-specific malloc-machine.h.  Remove extra ; from extern "C"
	closing brace.
	* sysdeps/generic/malloc-machine.h: New file.
	* sysdeps/mach/hurd/malloc-machine.h: New file.
	* malloc/thread-m.h: Removed.
	* malloc/Makefile: Remove CFLAGS-malloc.c parameter addition, it
	is in sysdeps/generic/malloc-machine.h now.

2003-09-29  Ulrich Drepper  <drepper@redhat.com>

	* elf/dl-reloc.c (_dl_allocate_static_tls): Move definition of
	variables only used if TLS_TCB_AT_TP is defined into the #if
	branch.

	* sysdeps/unix/sysv/linux/sys/sysmacros.h: Add __extension__ as
	well to cover using long long in C90.

2003-09-28  Alfred M. Szmidt  <ams@kemisten.nu>

	* sysdeps/mach/hurd/bits/libc-lock.h (__libc_cleanup_pop):
	Redefine and use __libc_cleanup_region_end instead.

2003-09-29  Thorsten Kukuk  <kukuk@suse.de>

	* sysdeps/unix/sysv/linux/sys/sysmacros.h: Use __inline and
	fix prototypes for picky C++ compilers.

2003-09-27  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/ustat.c (ustat): Set errno to EINVAL if
	the device ID is invalid and return -1.
	* sysdeps/unix/sysv/linux/xmknod.c (__xmknod): Likewise.

2003-09-26  Andreas Schwab  <schwab@suse.de>

	* sysdeps/unix/sysv/linux/ia64/getcontext.S: Pass fourth argument to
	rt_sigprocmask system call.

2003-09-25  Roland McGrath  <roland@redhat.com>

	* sysdeps/unix/sysv/linux/dl-execstack.c (_dl_make_stack_executable):
	Don't check for zero __libc_stack_end, it should be initialized.
	[_STACK_GROWS_DOWN] [PROT_GROWSDOWN]: Try using PROT_GROWSDOWN flag